For demos that use ipywidgets use async version.
For demos that use ipywidgets use the async version of the vpython demo. This is because a vpython program can run forever in a cell and for many ipywidgets to work the cell must run to completion. Using async version of the demo vpython program will enable the ipywidgets to run properly.

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "[Local moving lights](Demos/BoxLightTest.ipynb): local lights moving around the scene\n",
     "\n",
-    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus1.ipynb): rotating box, Jupyter widgets\n",
+    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus1-async.ipynb): rotating box, Jupyter widgets\n",
     "\n",
     "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus2.ipynb): rotating box, GlowScript widgets\n",
     "\n",
@@ -68,7 +68,7 @@
     "\n",
     "[Surreal Stonehenge](Demos/Stonehenge.ipynb): fly through a surreal scene\n",
     "\n",
-    "[Textures](Demos/Textures1.ipynb): textures included with Jupyter VPython, Jupyter widgets\n",
+    "[Textures](Demos/Textures1-async.ipynb): textures included with Jupyter VPython, Jupyter widgets\n",
     "\n",
     "[Textures](Demos/Textures2.ipynb): textures included with Jupyter VPython, GlowScript widgets\n",
     "\n",
